installed cloudinary and multer and multer-storage-cloudinary

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ MONGO_URL=your_mongodb_connection_string
 JWT_KEY=your_jwt_secret_key
 STRIPE_SECRET_KEY=""
 STRIPE_WEBHOOK_SECRET=""
+CLOUDINARY_CLOUD_NAME=""
+CLOUDINARY_API_KEY=""
+CLOUDINARY_API_SECRET=""
